--- a/index.html
+++ b/index.html
@@ -6,22 +6,22 @@
   <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
 </HEAD>
 <body>
-  <div class="aaa">
+  <div class="info">
     <img src="./eisenhower-matrix.jpg">
-    <a class="more_inf" 
+    <a class="info__link" 
     href="https://goal-life.com/page/method/matrix-eisenhower">
     Want more details?</a>
   </div>
-  <div class="centered-main-page-element">
-    <p id="topSectionForAddingElementToList">
-    <label for="new-task">Add Item</label>
-  <div class="task-row-wrapper">
-    <input id="new-task"class="task" type="text">
+  <div class="form">
+    <p id="form__input__label">
+    <label for="form__input__label">Add Item</label>
+  <div class="form__input">
+    <input id="form__input__new-task"class="task" type="text">
     <button>Add</button>
   </div>
   </p>
   <h3>Todo</h3>
-  <ul id="incompleteTasks">
+  <ul id="form__incomplete-tasks">
     <li>
       <input type="checkbox">
       <label class="task">Pay Bills</label>
@@ -41,7 +41,7 @@
     </li>
   </ul>
   <h3>Completed</h3>
-  <ul id="completed-tasks">
+  <ul id="form__completed-tasks">
     <li>
       <input type="checkbox" checked>
       <label class="task">See the Doctor</label>
