refactor: rename "p" to "div" according to rule 1.1 in html-and-css-advanced.md

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     Want more details?</a>
   </div>
   <div class="form">
-    <p id="form__input__label">
+    <div id="form__input__label">
     <label for="form__input__label">Add Item</label>
   <div class="form__input">
     <input id="form__input__new-task"class="task" type="text">
     <button>Add</button>
   </div>
-  </p>
+  </div>
   <h3>Todo</h3>
   <ul id="form__incomplete-tasks">
     <li>
